name:                ether
version:             0.1.0.0
synopsis:            Ethereum in Haskell
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Richard Larocque
maintainer:          richard.larocque@gmail.com
copyright:           Copyright (c) 2014 Richard Larocque
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:       base >=4.7 && <4.8,
                       array >= 0.5 && < 0.6,
                       largeword >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       vector >= 0.10 && < 0.11,
                       cryptohash >= 0.11 && < 0.12,
                       crypto-random >= 0.0.7 && < 0.1,
                       crypto-pubkey >= 0.2 && < 0.3,
                       crypto-pubkey-types >= 0.4 && < 0.5,
                       byteable >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11,
                       binary >= 0.7 && < 0.8,
                       mtl >= 2.2 && < 2.3,
                       data-lens >= 2.10 && < 2.11,
                       OddWord >= 1.0 && < 1.1

  ghc-options:         -O2 -Wall
  exposed-modules:
      Ethereum.Common
      Ethereum.EVM.ExecutionEnvironment
      Ethereum.EVM.InstructionSet
      Ethereum.EVM.MachineState
      Ethereum.EVM.VM
      Ethereum.Encoding.HexPrefix
      Ethereum.Encoding.RLP
      Ethereum.FeeSchedule
      Ethereum.SimpleTypes
      Ethereum.Execution
      Ethereum.State.Account
      Ethereum.State.Address
      Ethereum.State.Transaction
      Ethereum.Storage.Context
      Ethereum.Storage.HashMap
      Ethereum.Storage.Trie
      Ethereum.Lang.Ops

  default-language:    Haskell2010

Test-suite ether_tests
  main-is:             Tests/test_main.hs
  type:                exitcode-stdio-1.0

  build-depends:       base >=4.7 && <4.8,
                       array >= 0.5 && < 0.6,
                       binary >= 0.7 && < 0.8,
                       byteable >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11,
                       containers >=0.5 && <0.6,
                       cryptohash >= 0.11 && < 0.12,
                       crypto-random >= 0.0.7 && < 0.1,
                       crypto-pubkey >= 0.2 && < 0.3,
                       crypto-pubkey-types >= 0.4 && < 0.5,
                       data-lens >= 2.10 && < 2.11,
                       largeword >=1.2 && <1.3,
                       mtl >= 2.2 && < 2.3,
                       vector >= 0.10 && < 0.11,
                       OddWord >= 1.0 && < 1.1

  ghc-options:         -O2 -Wall

  other-modules:
      Tests.HUnit.Account,
      Tests.HUnit.EVM,
      Tests.HUnit.HexPrefix,
      Tests.HUnit.RLP,
      Tests.HUnit.Transaction,
      Tests.HUnit.Trie,
      Tests.HUnit.Integration

  build-depends:
      ether,
      HUnit,
      test-framework,
      test-framework-hunit

  default-language:    Haskell2010
