name:                ether
version:             0.1.0.0
synopsis:            Ethereum in Haskell
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Richard Larocque
maintainer:          richard.larocque@gmail.com
copyright:           Copyright (c) 2014 Richard Larocque
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:       base >=4.7 && <4.8,
                       array >= 0.5 && < 0.6,
                       largeword >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       vector >= 0.10 && < 0.11,
                       cryptohash >= 0.11 && < 0.12,
                       crypto-random >= 0.0.7 && < 0.1,
                       crypto-pubkey >= 0.2 && < 0.3,
                       crypto-pubkey-types >= 0.4 && < 0.5,
                       byteable >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11,
                       cereal >= 0.4,
                       mtl >= 2.2 && < 2.3,
                       data-lens >= 2.10 && < 2.11,
                       OddWord >= 1.0 && < 1.1

  ghc-options:         -Wall
  exposed-modules:
      Ethereum.Common
      Ethereum.EVM.ExecutionEnvironment
      Ethereum.EVM.InstructionSet
      Ethereum.EVM.MachineState
      Ethereum.EVM.VM
      Ethereum.Encoding.HexPrefix
      Ethereum.Encoding.RLP
      Ethereum.FeeSchedule
      Ethereum.SimpleTypes
      Ethereum.Execution
      Ethereum.BlockVerification
      Ethereum.State.Account
      Ethereum.State.Address
      Ethereum.State.Block
      Ethereum.State.Transaction
      Ethereum.Storage.Context
      Ethereum.Storage.HashMap
      Ethereum.Storage.Trie
      Ethereum.Lang.Ops

  default-language:    Haskell2010

Test-suite ether_tests
  main-is:             Tests/test_main.hs
  type:                exitcode-stdio-1.0

  build-depends:       base >=4.7 && <4.8,
                       OddWord >= 1.0 && < 1.1,
                       array >= 0.5 && < 0.6,
                       binary >= 0.7 && < 0.8,
                       byteable >= 0.1 && < 0.2,
                       bytestring >= 0.10 && < 0.11,
                       cereal >= 0.4,
                       containers >=0.5 && <0.6,
                       crypto-pubkey >= 0.2 && < 0.3,
                       crypto-pubkey-types >= 0.4 && < 0.5,
                       crypto-random >= 0.0.7 && < 0.1,
                       cryptohash >= 0.11 && < 0.12,
                       data-lens >= 2.10 && < 2.11,
                       largeword >=1.2 && <1.3,
                       mtl >= 2.2 && < 2.3,
                       secp256k1 == 0.1.0.0,
                       vector >= 0.10 && < 0.11

  ghc-options:         -Wall

  other-modules:
      Tests.HUnit.Account,
      Tests.HUnit.Block,
      Tests.HUnit.EVM,
      Tests.HUnit.HexPrefix,
      Tests.HUnit.RLP,
      Tests.HUnit.Transaction,
      Tests.HUnit.Trie,
      Tests.HUnit.Integration,
      Tests.Helpers

  build-depends:
      ether,
      tasty >= 0.7,
      tasty-hunit >= 0.9,
      tasty-quickcheck >= 0.8

  default-language:    Haskell2010
